--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,19 @@
             <tr>
                 <th>NRP</th>
                 <th>NAMA</th>
+                <th>AKSI</th>
             </tr>
         </thead>
         <tbody>
             <tr th:each="mhs : ${mahasiswa}">
                 <td th:text="${mhs.nrp}">NRP</td>
                 <td th:text="${mhs.nama}">NAMA</td>
+                <td>
+                <a th:href="@{'/mahasiswa/edit/' + ${mhs.nrp}}" class="btn btn-warning btn-sm">Edit</a>
+                <a th:href="@{'/mahasiswa/delete/' + ${mhs.nrp}}"
+                   class="btn btn-danger btn-sm"
+                   onclick="return confirm('Yakin ingin menghapus data ini?')">Hapus</a>
+            </td>
             </tr>
         </tbody>
     </table>
