--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
         </li>
       </ul>
         <div class="ms-auto">
-            <a href="#" class="btn btn-light btn-sm custom-nav-link">Login</a>
+            <a href="http://127.0.0.1:5500/templates/login.html" class="btn btn-light btn-sm custom-nav-link">Login</a>
         </div>
     </div>
   </div>
