--- a/templates/register.html
+++ b/templates/register.html
@@ -4,13 +4,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login</title>
+  <title>SignUp</title>
   <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
 <!-- Login -->
 <div class="login-container">
-  <h2>Login</h2>
+  <h2>Daftar</h2>
   <form>
     <div class="mb-3">
       <label for="email" class="form-label">Email address</label>
@@ -20,8 +20,7 @@
       <label for="password" class="form-label">Password</label>
       <input type="password" class="form-control" id="password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-orange">Login</button>
-    <p class="text-center text-muted mt-3">Belum punya akun? <a href="#">Daftar</a></p>
+    <button type="submit" class="btn btn-orange">Daftar</button>
   </form>
 </div>
 
