--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
-  <link rel="stylesheet" href="static/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <!-- Login -->
@@ -21,11 +21,11 @@
       <input type="password" class="form-control" id="password" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-orange">Login</button>
-    <p class="text-center text-muted mt-3">Belum punya akun? <a href="#">Daftar</a></p>
+    <p class="text-center text-muted mt-3">Belum punya akun? <a href="register.html">Daftar</a></p>
   </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-<script src="static/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
