--- a/templates/admintambah.html
+++ b/templates/admintambah.html
@@ -19,7 +19,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link custom-nav-link active" href="admin.html">Home</a></li>
         <li class="nav-item"><a class="nav-link custom-nav-link" href="#">Daftar Buku</a></li>
-        <li class="nav-item"><a class="nav-link custom-nav-link" href="#">Daftar Penjualan</a></li>
+        <li class="nav-item"><a class="nav-link custom-nav-link" href="daftarpenjualan.html">Daftar Penjualan</a></li>
       </ul>
     </div>
   </div>
