--- a/templates/daftarpenjualan.html
+++ b/templates/daftarpenjualan.html
@@ -17,8 +17,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link custom-nav-link active" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link custom-nav-link" href="#">Daftar Buku</a></li>
+        <li class="nav-item"><a class="nav-link custom-nav-link active" href="admin.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link custom-nav-link" href="daftarbuku.html">Daftar Buku</a></li>
         <li class="nav-item"><a class="nav-link custom-nav-link" href="#">Daftar Penjualan</a></li>
       </ul>
     </div>
