--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,9 +35,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link custom-nav-link" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-bars"></i>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">            <li><a class="dropdown-item" th:href="@{/user/profile}"><i class="fas fa-user me-2"></i>Profile</a></li>
-            <li><a class="dropdown-item" href="/favorites"><i class="fas fa-heart me-2"></i>Favorit</a></li>
+          </a>          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+            <li><a class="dropdown-item" th:href="@{/user/profile}"><i class="fas fa-user me-2"></i>Profile</a></li>
+            <li><a class="dropdown-item" th:href="@{/favorites}"><i class="fas fa-heart me-2"></i>Favorit</a></li>
             <li><a class="dropdown-item" th:href="@{/cart}"><i class="fas fa-shopping-cart me-2"></i>Keranjang</a></li>
             <li><hr class="dropdown-divider"></li>
             <li>
