Update on Admin Transaction Viewer & added basic Footer

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -185,6 +185,10 @@
     </div>
 </main>
 
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2023 JagoanBaca. All rights reserved.</p>
+</footer>
+
 <!-- Font Awesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
