--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -101,6 +101,10 @@
     </div>
 </template>
 
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2023 JagoanBaca. All rights reserved.</p>
+</footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 <script th:src="@{/js/cart.js}"></script>
 </body>
