--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -211,6 +211,10 @@
         </div>
     </div>
 
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2023 JagoanBaca. All rights reserved.</p>
+    </footer>
+
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
