update kategori buku dan filtering buku

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container-fluid">
-        <a class="navbar-brand custom-nav-link" href="/">JagoanBaca</a>
+        <a class="navbar-brand custom-nav-link" th:href="@{/home}">JagoanBaca</a>
         <button class="navbar-toggler custom-nav-link" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
             <span class="navbar-toggler-icon"></span>
         </button>
