--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container-fluid">
-            <a class="navbar-brand custom-nav-link" href="/">JagoanBaca</a>
+            <a class="navbar-brand custom-nav-link" href="@{/home}">JagoanBaca</a>
         </div>
     </nav>
 
