--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -211,9 +211,47 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2023 JagoanBaca. All rights reserved.</p>
-    </footer>
+<footer class="bg-dark text-light pt-4 mt-5">
+  <div class="container">
+    <div class="row">
+
+      <!-- Logo & About -->
+      <div class="col-md-4 mb-3">
+        <h5 class="text-uppercase">JagoanBaca</h5>
+        <p>Baca buku favoritmu dengan mudah dan cepat. Temukan ribuan judul dari berbagai genre di ujung jarimu.</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-md-4 mb-3">
+        <h5 class="text-uppercase">Navigasi</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-decoration-none text-light">Beranda</a></li>
+          <li><a href="/trending.html" class="text-decoration-none text-light">Trending</a></li>
+          <li><a href="/favorites" class="text-decoration-none text-light">Favorit</a></li>
+          <li><a href="/cart" class="text-decoration-none text-light">Keranjang</a></li>
+          <li><a href="/user/profile" class="text-decoration-none text-light">Profil</a></li>
+        </ul>
+      </div>
+
+      <!-- Social Media -->
+      <div class="col-md-4 mb-3">
+        <h5 class="text-uppercase">Ikuti Kami</h5>
+        <a href="#" class="text-light me-3"><i class="fab fa-facebook fa-lg"></i></a>
+        <a href="#" class="text-light me-3"><i class="fab fa-instagram fa-lg"></i></a>
+        <a href="#" class="text-light me-3"><i class="fab fa-twitter fa-lg"></i></a>
+        <a href="#" class="text-light"><i class="fab fa-youtube fa-lg"></i></a>
+      </div>
+
+    </div>
+
+    <!-- Copyright -->
+    <div class="row">
+      <div class="col-12 text-center mt-3">
+        <p class="mb-0">&copy; 2025 JagoanBaca. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
