--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -16,9 +16,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>    <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link custom-nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link custom-nav-link active" th:href="@{/admin}">Home</a></li>
         <li class="nav-item"><a class="nav-link custom-nav-link" th:href="@{/books}">Daftar Buku</a></li>
-        <li class="nav-item"><a class="nav-link custom-nav-link" href="#">Daftar Penjualan</a></li>
+        <li class="nav-item"><a class="nav-link custom-nav-link" th:href="@{/home}">User Page</a></li>
       </ul>
       <form th:action="@{/logout}" method="post" class="d-flex">
         <button type="submit" class="btn btn-outline-light">Logout</button>
